# LabsCC

simple_robot_description/: CMakeLists.txt  package.xml
simple_robot_description/config/: gz_bridge.yaml
simple_robot_description/launch/: detection_challenge.launch.py  display.launch.py  gazebo.launch.py  robot_complete.launch.py
simple_robot_description/launch/include/: gazebo.launch.py  markers.launch.py  robot_state_publisher.launch.py  rviz.launch.py  teleop.launch.py  transforms.launch.py
simple_robot_description/models/fast_sign_poster/: model.config  model.sdf
simple_robot_description/models/orange_poster/: model.config  model.sdf
simple_robot_description/models/slow_sign_poster/: model.config  model.sdf
simple_robot_description/models/stop_sign_poster/: model.config  model.sdf
simple_robot_description/models/tree_poster/: model.config  model.sdf
simple_robot_description/models/vehicle_poster/: model.config  model.sdf
simple_robot_description/rviz/: urdf_config.rviz  urdf_config_nogazebo.rviz
simple_robot_description/scripts/: dynamic_transform_publisher.py  frame_marker_publisher.py  path_marker_publisher.py
simple_robot_description/urdf/: simple_robot.urdf  simple_robot_gazebo.urdf
simple_robot_description/worlds/diff_drive/: detection_world.sdf  diff_drive.sdf
