<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_robot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ntu-user@ntu.ac.uk">ntu-user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

<depend>urdf</depend>
<depend>xacro</depend>
<depend>robot_state_publisher</depend>
<depend>joint_state_publisher</depend>
<depend>joint_state_publisher_gui</depend>
<depend>gazebo_ros</depend>
<depend>rviz2</depend>
<depend>visualization_msgs</depend>

<exec_depend>ros2launch</exec_depend>
<exec_depend>teleop_twist_keyboard</exec_depend>
<exec_depend>xterm</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
